force-app/main/default/objects/Transport__c/fields/Airport_From__c.field-meta.xml
<CustomField>
    <fullName>Airport_From__c</fullName>
    <label>Airport From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>