force-app/main/default/objects/Transport__c/fields/Airport_To__c.field-meta.xml
<CustomField>
    <fullName>Airport_To__c</fullName>
    <label>Airport To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>