force-app/main/default/objects/Transport__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Episode</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Transports</relationshipLabel>
    <relationshipName>Transports</relationshipName>
    <type>Lookup</type>
</CustomField>