force-app/main/default/objects/Transport__c/fields/Drop_Address__c.field-meta.xml
<CustomField>
    <fullName>Drop_Address__c</fullName>
    <label>Drop Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>