force-app/main/default/objects/Transport__c/fields/Drop_arrangements_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Drop_arrangements_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop arrangements confirmed?</label>
    <type>Checkbox</type>
</CustomField>