force-app/main/default/objects/Transport__c/fields/Flight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flight_Cost__c</fullName>
    <label>Flight Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>