force-app/main/default/objects/Transport__c/fields/Flight_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Time__c</fullName>
    <label>Flight Date/Time</label>
    <type>DateTime</type>
</CustomField>