force-app/main/default/objects/Transport__c/fields/Itinerary_Number__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Number__c</fullName>
    <label>Itinerary Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>