force-app/main/default/objects/Transport__c/fields/Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address__c</fullName>
    <label>Pickup Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>