force-app/main/default/objects/Transport__c/fields/Pickup_arrangements_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Pickup_arrangements_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup arrangements confirmed?</label>
    <type>Checkbox</type>
</CustomField>