force-app/main/default/objects/Transport__c/fields/Transport_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Transport_Phone_Number__c</fullName>
    <label>Transport Phone Number</label>
    <type>Phone</type>
</CustomField>