force-app/main/default/objects/Transport__c/fields/Travel_Info__c.field-meta.xml
<CustomField>
    <fullName>Travel_Info__c</fullName>
    <label>Transport Info</label>
    <type>TextArea</type>
</CustomField>