force-app/main/default/objects/Transport__c/fields/Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode__c</fullName>
    <inlineHelpText>I am Travelling Primary via</inlineHelpText>
    <label>Transport Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Uber</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Transport</fullName>
            </value>
            <value>
                <fullName>Pick-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>