force-app/main/default/objects/Transport__c/fields/Travel_Status__c.field-meta.xml
<CustomField>
    <fullName>Travel_Status__c</fullName>
    <label>Transport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed Travel Arrangements</fullName>
            </value>
            <value>
                <fullName>Missed Travel Arrangement</fullName>
            </value>
            <value>
                <fullName>Re-booked Travel Arrangement</fullName>
            </value>
            <value>
                <fullName>Confirmed Pickup</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In-progress</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Entered in Error</fullName>
            </value>
            <value>
                <fullName>Made Travel Arrangement</fullName>
                <isActive>false</isActive>
                <label>Made Travel Arrangement</label>
            </value>
            <value>
                <fullName>New Itinerary</fullName>
                <isActive>false</isActive>
                <label>New Itinerary</label>
            </value>
            <value>
                <fullName>Travel Booked</fullName>
                <isActive>false</isActive>
                <label>Travel Booked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>