force-app/main/default/objects/Transport__c/recordTypes/Air_Travel.recordType-meta.xml
<RecordType>
    <fullName>Air_Travel</fullName>
    <active>true</active>
    <label>Air Travel</label>
</RecordType>