force-app/main/default/objects/Transport__c/recordTypes/Local_Uber.recordType-meta.xml
<RecordType>
    <fullName>Local_Uber</fullName>
    <active>true</active>
    <label>Shared Ride</label>
</RecordType>