force-app/main/default/objects/Transport__c/validationRules/End_date_cannot_be_less_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_cannot_be_less_than_start_date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(BypassValidation__c=FALSE,(DATETIMEVALUE(Start_Time__c )&gt; DATETIMEVALUE(End_Time__c )))</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End date cannot be less than start date.</errorMessage>
</ValidationRule>