force-app/main/default/objects/Transport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Approved_Programs__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Travel_Info__c</columns>
    <columns>Travel_Mode__c</columns>
    <columns>Transport_Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>